<?xml version="1.0"?>
<package format="3">
  <name>oculus_driver</name>
  <version>1.0.0</version>
  <description>ROS2 driver for Oculus M750D sonar</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
